--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "react": "^15.0.1",
     "react-bootstrap": "^0.29.4",
-    "react-dom": "^15.0.1",
-    "react-rangeslider": "^1.0.2"
+    "react-dom": "^15.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.7.7",
